--- a/SG4_G4.ipynb
+++ b/SG4_G4.ipynb
@@ -31,7 +31,7 @@
         "# Load data\n",
         "df = pd.read_csv(\"Dutch_Migration_News.csv\")\n",
         "\n",
-        "# Expected columns (rename here if needed)\n",
+        "# Expected columns\n",
         "TITLE_COL = \"title\"\n",
         "BODY_COL  = \"body\"\n",
         "\n",
